# biomimetic-lattice-pipeline

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
biomimetic_pipeline/: logging_config.py
biomimetic_pipeline/config/objectives/: biomimicry_score.yaml  composite.yaml  crack_deflection.yaml  stiffness_target.yaml  toughness.yaml
biomimetic_pipeline/fea/: fea_runner.py  metrics_runner.py  strain_solver.py
biomimetic_pipeline/generators/: cad_integrity.py  cad_runner.py  digital_twin_bspline_runner.py  digital_twin_runner.py  digital_twin_sdf_runner.py  mesh_runner.py
biomimetic_pipeline/generators/new_models/: hierarchical_twist.py  measured_profile_twist.py  radially_graded.py
biomimetic_pipeline/ingest/: hsb_ingester.py  merge.py  piv_ingester.py  smoothed3d_ingester.py  som_ingester.py  tracking_ingester.py  validation_ingester.py
biomimetic_pipeline/mapping/: bridge_mappers.py  feature_to_cad.py  rod_mappers.py  scale.py  twist_mappers.py
biomimetic_pipeline/mapping/archive/: bridge_mappers_20260528_122322.py
biomimetic_pipeline/metrics/: biomimicry_score.py  crack_deflection.py
biomimetic_pipeline/objectives/: registry.py
biomimetic_pipeline/orchestration/: closed_loop.py  optimize.py  pipeline.py  run_context.py  sweep.py  sweep_log.py
biomimetic_pipeline/reporting/: generate_pipeline_figures.py  latex_report.py
biomimetic_pipeline/reporting/templates/: specimen_report.tex
biomimetic_pipeline/schemas/: cad_parameters.schema.json  morphometrics.schema.json  objective.schema.json
docs/: MODEL_PARAMETER_REPORT.tex  PIPELINE.tex
geometry/: README.md  compression_test.py  extract_metrics.py  lattice_cad.py  lattice_mesh.py
scripts/: analyze_lattice_defect.py  build_combined_sweep_log.py  build_sweep_log.py  check_printability_fdm.py  cross_sections_thick_vs_original.py  diagnose_h24_watertight.py  diagnose_n9_slivers.py  generate_cad.py  ingest_features.py  make_thick_rod_variant.py  plot_sweep_results.py  precheck_jitter050.py  probe_mesh_from_stl.py  probe_n8_bridge_jitter.py  probe_n8_thick_offsets.py  probe_taller_lattice.py  probe_thick_shrink.py  rerun_all_12.sh  run_closed_loop.py  run_decussation_sweep.py  run_layer_sweep_with_thick.sh  run_layer_sweep_with_thick_batched.sh  run_optimize.py  run_pipeline.py  run_single_trial.py  run_stragglers.sh  run_sweep.py  run_tension.py  run_thick_rerun.sh  run_thick_trial_tall.py  run_trial_tall.py  run_twin_pipeline.py
tests/: run_all.py  test_crack_deflection.py  test_mapping.py  test_new_models.py  test_objective_registry.py  test_strain_solver.py  test_value_carrythrough.py
tests/fixtures/: morphometrics.json
